@@ -1,5 +1,10 @@
 2009-04-03 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/ralloc.c:
+	  Enabled use of hl as inter-i-code temporary.
+
+2009-04-03 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/peeph-z80.def:
 	  Reenabled peephole 0t.
 
